Sửa lại một số API