@@ -1,7 +1,6 @@
 package org.bbqqvv.backendecommerce.service.img;
 
 import lombok.AccessLevel;
-import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
 import lombok.extern.slf4j.Slf4j;
 import org.bbqqvv.backendecommerce.config.ImgBBConfig;
@@ -9,35 +8,41 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
 @Slf4j
 public class FileStorageService {
 
-    private final ImgBBConfig imgBBConfig;
+    ImgBBConfig imgBBConfig;
 
     public FileStorageService(ImgBBConfig imgBBConfig) {
         this.imgBBConfig = imgBBConfig;
     }
 
-    // Upload ảnh chính
-    public String storeMainImage(MultipartFile mainImage) {
-        return imgBBConfig.uploadImage(mainImage);
+    /**
+     * Upload một ảnh duy nhất.
+     *
+     * @param image MultipartFile đại diện cho ảnh cần upload
+     * @return URL của ảnh đã upload
+     */
+    public String storeImage(MultipartFile image) {
+        log.info("Uploading single image...");
+        return imgBBConfig.uploadImage(image);
     }
 
-    // Upload danh sách ảnh phụ
-    public List<String> storeSecondaryImages(List<MultipartFile> secondaryImages) {
-        return secondaryImages.stream()
+    /**
+     * Upload danh sách ảnh.
+     *
+     * @param images Danh sách MultipartFile đại diện cho các ảnh cần upload
+     * @return Danh sách URL của các ảnh đã upload
+     */
+    public List<String> storeImages(List<MultipartFile> images) {
+        log.info("Uploading multiple images...");
+        return images.stream()
                 .map(imgBBConfig::uploadImage)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    // Upload danh sách ảnh mô tả
-    public List<String> storeDescriptionImages(List<MultipartFile> descriptionImages) {
-        return descriptionImages.stream()
-                .map(imgBBConfig::uploadImage)
-                .toList();
-    }
 }
-
